// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar ❌ renders Component correctly 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center items-center"
  >
    <img
      alt="alt_image"
      class=""
      height="70"
      src="https://picsum.photos/200"
      width="70"
    />
    <span
      class="https://picsum.photos/200 -mt-8 ml-4 p-2 rounded-full"
    >
      <svg
        class="text-white_day"
        fill="currentColor"
        height="15"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 144v288c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48h88l12.3-32.9c7-18.7 24.9-31.1 44.9-31.1h125.5c20 0 37.9 12.4 44.9 31.1L376 96h88c26.5 0 48 21.5 48 48zM376 288c0-66.2-53.8-120-120-120s-120 53.8-120 120 53.8 120 120 120 120-53.8 120-120zm-32 0c0 48.5-39.5 88-88 88s-88-39.5-88-88 39.5-88 88-88 88 39.5 88 88z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`CountdownTimer ❌ renders Component correctly 1`] = `
<DocumentFragment>
  <div
    class="bg-[#EBA352] h-[50px] w-[50px] rounded-full flex flex-col justify-center items-center"
  >
    <h2
      class="text-xs font-thin text-white"
    >
      30:00
    </h2>
  </div>
</DocumentFragment>
`;

exports[`DepositModal  ❌ renders Component correctly 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</DocumentFragment>
`;

exports[`Donut ❌ renders Component correctly 1`] = `
<DocumentFragment>
  <div
    class="px-8 flex flex-row items-center justify-center"
  >
    <canvas
      height="230"
      role="img"
      width="230"
    />
  </div>
</DocumentFragment>
`;

exports[`Withdrawal Component  ❌ renders Withdrawal Component correctly' 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</DocumentFragment>
`;
